BastionZone/eips.tf
# Resource: aws_eip
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/eip
resource "aws_eip" "nat1" {
  # EIP may require IGW to exist prior to association. 
  # Use depends_on to set an explicit dependency on the IGW.
  depends_on = [aws_internet_gateway.bastion-igw]
  tags = {
    "Name" = "EIP1-bastion"
  }
}
# resource "aws_eip" "nat2" {
#   # EIP may require IGW to exist prior to association. 
#   # Use depends_on to set an explicit dependency on the IGW.
#   depends_on = [aws_internet_gateway.bastion-igw]
#   tags = {
#     "Name" = "EIP2-bastion"
#   }
# }

# resource "aws_eip" "nat3" {
#   # EIP may require IGW to exist prior to association. 
#   # Use depends_on to set an explicit dependency on the IGW.
#   depends_on = [aws_internet_gateway.bastion-igw]
#   tags = {
#     "Name" = "EIP3-bastion"
#   }
# }
